--- a/content/post/2021-02-05 COVID-19 mobility trends by Apple/covid19_mobility_data_apple.Rmd
+++ b/content/post/2021-02-05 COVID-19 mobility trends by Apple/covid19_mobility_data_apple.Rmd
@@ -8,7 +8,7 @@ Challenge 2: Get to know Apple's COVID-19 mobility trend data
 
 During 2020 several new R-packages providing data relating to the global pandemic COVID-19 were released. One of these is  [**Apple's mobility trend data**](https://covid19.apple.com/mobility), which the tech-giant released to the public in March 2020. (Shortly after [**Google**](https://www.google.com/covid19/mobility/) also released their mobility data which I will dive into in an upcoming post).
 
-Most of my previous coding expereince has mostly been done in order to manipulate and wrangle data or arrive to a numeric result produced to an csv-file that was to serve as in input to another program. Hence, my expereince of visualising data (nicely) for presentations or reports is close to non-existent. The challenge for me in this post is to learn to visualize data using [**RMarkdown**](https://rmarkdown.rstudio.com/) and the package [**tidyverse**](https://www.tidyverse.org/).
+Most of my previous coding experience has mostly been done in order to manipulate and wrangle data or arrive to a numeric result produced to an csv-file that was to serve as in input to another program. Hence, my expereince of visualising data (nicely) for presentations or reports is close to non-existent. The challenge for me in this post is to learn to visualize data using [**RMarkdown**](https://rmarkdown.rstudio.com/) and the package [**tidyverse**](https://www.tidyverse.org/).
 
 
 ```{r setup, include=FALSE}
@@ -17,29 +17,29 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r load packages and set wd, include=FALSE}
 if (!require("pacman")) install.packages("pacman")
-pacman::p_load(tidyverse, covid19mobility)
+pacman::p_load(tidyverse, covid19mobility, scales)
 
 # Set work directory on PC
-setwd("/Users/ruzicagajic/Documents/Data Scientist/Projects")
+setwd("/Users/ruzicagajic/Documents/Data Scientist/r-website/r-website/content/post/2021-02-05 COVID-19 mobility trends by Apple")
 ```
 
 The mobility data from both Apple and Google is available in the R [**covid19mobility**](https://github.com/Covid19R/covid19mobility) package. Apple's data is published daily and "reflects requests for directions in Apple Maps" since 13 January 2020 for countries, cities and subregions.
 
 I start by loading the data:
 
-```{r refresh apple data, echo=FALSE}
+```{r}
 # Load Apple's country and city data and add it to a data frame
 df_apple_country <- refresh_covid19mobility_apple_country()
 df_apple_city <- refresh_covid19mobility_apple_city()
 
-# Use the code below access Apple's mobilty trend data for subregions of countries. I however will be using the data on subregions in a future post where I will look into how I can visualise it in a geographic map of Sweden.
-#df_apple_subregion <- refresh_covid19mobility_apple_subregion()
-
+# Use the code below to access Apple's mobilty trend data for subregions of countries. 
+# I will be using the data on subregions in a future post.
+# df_apple_subregion <- refresh_covid19mobility_apple_subregion()
 ```
 
-Then I assign values to varaibles in order to faciitate the possibility of altering the city or country of interest:
+Then I assign values to varaibles in order to faciitate the process of altering the city or country of interest:
 
-```{r samples, echo = FALSE}
+```{r}
 # Assign the country/city/region you are interested in to variables
 country <- "Sweden"
 countries <- c(country, "Norway", "Denmark")
@@ -48,13 +48,11 @@ cities <- c("Stockholm", "Oslo", "Copenhagen")
 # Assign the start and end date of the data to variables for use in captions
 start <- as.Date(min(df_apple_country$date))
 end <- as.Date(max(df_apple_country$date))
-
 ```
 
 Next, I create a custom theme that I want to apply to all plots:
 
-```{r personalized text theme, echo=FALSE}
-
+```{r}
 my_text_theme <- theme(
   plot.title = element_text(family = "Helvetica", face = "bold", size = (15)),
   plot.subtitle = element_text(family = "Helvetica", size = (10)),
@@ -64,12 +62,11 @@ my_text_theme <- theme(
   axis.text = element_text(family = "Helvetica", colour = "black", size = (10)))
 
 theme_set(my_text_theme)
-
 ```
 
-The data is easy to use. After loading the data and creating my theme, I filter out mobility trend data for Sweden and visualise Apple's three mobility indocators (driving, public transport and walking) in a plot:
+The data is very easy to use. First, I filter out mobility trend data for the country Sweden. Then I visualise Apple's three mobility indicators (driving, public transport and walking) for Sweden in a plot:
 
-```{r apple sweden, echo=FALSE}
+```{r}
 
 plot1 <- df_apple_country %>%
   filter(location %in% country) %>%
@@ -101,9 +98,9 @@ plot1
 
 ```
 
-Next I want to compare the mobility indicators for Sweden (who's corona strategy has differed wildly from that of many other countries) to those of neighboring Denmark and Norway by facetting the plot:
+Next, I want to compare the mobility indicators for Sweden to those of neighboring Denmark and Norway by facetting the plot:
 
-```{r country comparison, echo=FALSE}
+```{r}
 
 plot2 <- df_apple_country %>%
   filter(location %in% countries) %>%
@@ -138,10 +135,9 @@ plot2
 
 ```
 
-Next I invert the facet by columns (instead of by rows as above) and I compare each mobility indicator in seperate plots:
+Next, instead of comparing three plots for each country, I want to compare three plots for each mobility indicator. I also facet by columns (instead of by rows as above):
 
-```{r apple mobility indicator comparison, echo=FALSE}
-
+```{r}
 plot3 <- df_apple_country %>%
   filter(location %in% countries) %>%
   mutate(mobility_indicator = case_when(
@@ -151,7 +147,7 @@ plot3 <- df_apple_country %>%
     ) %>%
   arrange(mobility_indicator) %>%
   
-  ggplot(aes(x = date, y = (value/100 -1)*100, color = location)) +
+  ggplot(aes(x = date, y = (value/100 -1)*100, color = location)) +  # I change the color to 'location'
   geom_line() +
   theme_bw() +
   my_text_theme +
@@ -175,9 +171,9 @@ plot3
 
 ```
 
-Next, I am curious to see whether the big uptick in driving during the summer of 2020 was concentrated to Sweden's capital Stockholm. The plot shows no uptick in the mobility indicator "driving" in Stockholm, so the big lift happened in the rest of the country:
+Next, I am curious to see whether the big uptick in driving during the summer of 2020 in Sweden was concentrated to Sweden's capital Stockholm:
 
-```{r apple capital, echo=FALSE}
+```{r}
 
 plot4 <- df_apple_city %>%
   filter(location %in% cities[1]) %>%
@@ -209,9 +205,9 @@ plot4
 
 ```
 
-Next I want to compare Stockholm to the other Nordic capitals Copenhagen (Denmark) and Oslo (Norway):
+The plot shows no uptick in the mobility indicator "driving" in Stockholm, so the big lift must have happened in the rest of the country. Next I want to compare Stockholm to the capitals of Denmark (Copenhagen) and Norway (Oslo):
 
-```{r capital comparison, echo=FALSE}
+```{r, echo=FALSE}
 
 plot5 <- df_apple_city %>%
   filter(location %in% cities) %>%
@@ -247,7 +243,7 @@ plot5
 
 
 
-```{r apple mobility indicator comparison capitals, echo=FALSE}
+```{r, echo=FALSE}
 
 plot6 <- df_apple_city %>%
   filter(location %in% cities) %>%
