Final draft first post

--- a/content/post/2021-02-05 COVID-19 mobility trends by Apple/covid19_mobility_data_apple.Rmd
+++ b/content/post/2021-02-05 COVID-19 mobility trends by Apple/covid19_mobility_data_apple.Rmd
@@ -8,8 +8,7 @@ title: "COVID-19 mobility trends by Apple"
 
 During 2020 several new R-packages providing data relating to the global pandemic COVID-19 were released. One of these is [**Apple's**](https://covid19.apple.com/mobility) mobility trend data, which the tech-giant released to the public in March 2020. (Shortly after [**Google**](https://www.google.com/covid19/mobility/) also released their mobility trend data which I will dive into in an upcoming post).
 
-Most of my previous coding experience was mostly performed in order to wrangle data or using statistical methods to arrive to a numeric result produced to an csv-file that in turn was to serve as input to another program. Hence, my expereince of visualising data for presentations or reports is close to non-existent. The challenge for me in this post is to learn to visualize data using [**RMarkdown**](https://rmarkdown.rstudio.com/) and the package [**tidyverse**](https://www.tidyverse.org/).
-
+Most of my previous coding experience was mostly performed in order to wrangle data or use statistical methods to arrive to a numeric result that I would export to a csv-file that in turn would serve as an input to another program. Hence, my expereince of visualising data for presentations or reports is close to non-existent. The biggest challenge for me in this post is to learn to visualize data using [**RMarkdown**](https://rmarkdown.rstudio.com/) and the package [**tidyverse**](https://www.tidyverse.org/).
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -17,13 +16,13 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r load packages and set wd, include=FALSE}
 if (!require("pacman")) install.packages("pacman")
-pacman::p_load(tidyverse, covid19mobility, scales)
+pacman::p_load(tidyverse, covid19mobility)
 
 # Set work directory on PC
 setwd("/Users/ruzicagajic/Documents/Data Scientist/r-website/r-website/content/post/2021-02-05 COVID-19 mobility trends by Apple")
 ```
 
-The mobility data from both Apple and Google is available in the R [**covid19mobility**](https://github.com/Covid19R/covid19mobility) package. Apple's data is published daily and "reflects requests for directions in Apple Maps" since 13 January 2020 for countries, cities and subregions.
+The mobility trend data from both Apple and Google is available in the R [**covid19mobility**](https://github.com/Covid19R/covid19mobility) package. Apple's data is published daily and "reflects requests for directions in Apple Maps" since 13 January 2020 for countries, cities and subregions.
 
 I start by loading the data:
 
@@ -50,7 +49,7 @@ start <- as.Date(min(df_apple_country$date))
 end <- as.Date(max(df_apple_country$date))
 ```
 
-Next, I create a custom theme that I want to apply to all plots:
+Next, I create a custom theme for all text that I include in my plots:
 
 ```{r}
 my_text_theme <- theme(
@@ -64,7 +63,14 @@ my_text_theme <- theme(
 theme_set(my_text_theme)
 ```
 
-The data is very easy to use. First, I filter out mobility trend data for the country Sweden. Then I visualise Apple's three mobility indicators (driving, public transport and walking) for Sweden in a plot:
+The data is very easy to use. 
+
+1. I start by filtering out the mobility trend data for the country Sweden. 
+2. Then I add a mobility indicator based on the string variable 'data_type'.
+3. I sort the data by the new variable 'mobility_indicator'.
+4. Finally, I visualise Apple's three mobility trend indicators (driving, public transport and walking) for Sweden in a plot.
+
+I notice quite a big increase in driving during the summer months:
 
 ```{r}
 
@@ -82,7 +88,7 @@ plot1 <- df_apple_country %>%
   theme_bw() +
   my_text_theme +
   
-  scale_x_date(expand = c(0,0), labels = date_format("%d %b %Y")) +
+  scale_x_date(expand = c(0,0), labels = scales::date_format("%d %b %Y")) +
   scale_y_continuous(expand = c(0,0)) +
   scale_color_manual(values=c("#003f5c", "#bc5090", "#ffa600")) +
  
@@ -95,11 +101,10 @@ plot1 <- df_apple_country %>%
   )
 
 plot1
-
 ```
-I found the folowing page on the website [www.learnui.design](https://learnui.design/tools/data-color-picker.html#palette) very useful when searching for colours to use in the plots (that work with color-blindness and look good in both light and dark theme).
+I found the following page on the website [**www.learnui.design**](https://learnui.design/tools/data-color-picker.html#palette) very useful when searching for colours to use in the plots (that both work well with color-blindness and look good in both light and dark theme).
 
-Next, I want to compare the mobility indicators for Sweden to those of neighboring Denmark and Norway by facetting the plot:
+Next, I want to compare the mobility indicators for Sweden to those of neighboring Denmark and Norway. I use facetting in order to visualise the individual plots for each country stacked on top of one another:
 
 ```{r}
 
@@ -117,7 +122,7 @@ plot2 <- df_apple_country %>%
   theme_bw() +
   my_text_theme +
   
-  scale_x_date(expand = c(0,0), labels = date_format("%b %y")) +
+  scale_x_date(expand = c(0,0), labels = scales::date_format("%b %y")) +
   scale_y_continuous(expand = c(0,0)) +
   scale_color_manual(values=c("#003f5c", "#bc5090", "#ffa600")) +
 
@@ -136,7 +141,7 @@ plot2
 
 ```
 
-Next, instead of comparing three plots for each country, I want to compare three plots for each mobility indicator. I also facet by columns (instead of by rows as above):
+Next, instead of comparing three plots for each country, I want to compare three plots for each mobility indicator. I facet by columns (instead of by rows as above):
 
 ```{r}
 plot3 <- df_apple_country %>%
@@ -153,7 +158,7 @@ plot3 <- df_apple_country %>%
   theme_bw() +
   my_text_theme +
   
-  scale_x_date(expand = c(0,0), labels = date_format("%b %y")) +
+  scale_x_date(expand = c(0,0), labels = scales::date_format("%b %y")) +
   scale_y_continuous(expand = c(0,0)) +
   scale_color_manual(values=c("#003f5c", "#bc5090", "#ffa600")) +
 
@@ -172,7 +177,7 @@ plot3
 
 ```
 
-Next, I am curious to see whether the big uptick in driving during the summer of 2020 in Sweden was concentrated to Sweden's capital Stockholm:
+Next, I am curious to see whether the big uptick in driving during the summer of 2020 in Sweden was concentrated to Sweden's capital Stockholm. Instead of using the same aesthetics as for the plot with data for Sweden, I play around a bit. Turns out there was no increase of driving in the Swedish capital during the summer:
 
 ```{r}
 
@@ -190,7 +195,7 @@ plot4 <- df_apple_city %>%
   theme_grey() +   # trying another theme
   my_text_theme +
   
-  scale_x_date(expand = c(0,0), labels = date_format("%d %b %Y")) +
+  scale_x_date(expand = c(0,0), labels = scales::date_format("%d %b %Y")) +
   scale_y_continuous(expand = c(0,0)) +
   scale_color_viridis_d(option = "D") +   # trying another color, 5 options A - E are available
   
@@ -205,61 +210,9 @@ plot4 <- df_apple_city %>%
 plot4
 
 ```
+I recommend that you check out the documentation of the package ggplot2 included in tidyverse, particularly the 'Scales' and 'Aesthetics' sections on the webpage [**www.ggplot2.tidyverse.org/**](https://ggplot2.tidyverse.org/reference/). ggplot2 is a system for declaratively creating graphics, based on [**The Grammar of Graphics**](http://vita.had.co.nz/papers/layered-grammar.pdf).
 
-The plot shows no uptick in the mobility indicator "driving" in Stockholm, so the big lift must have happened in the rest of the country. Next, I want to compare Stockholm to the capitals of Denmark (Copenhagen) and Norway (Oslo). I want to visualise both all three capitals and countries in one single plot:
-
-```{r}
-
-capital_and_country <- c("Stockholm", "Copenhagen", "Oslo", "Sweden", "Denmark", "Norway")
-
-join_country <- df_apple_country %>%
-  mutate(mobility_indicator = case_when(
-    str_detect(data_type, "driving") ~ "Driving",
-    str_detect(data_type, "transit") ~ "Public transport",
-    str_detect(data_type, "walking") ~ "Walking")) %>%
-  select(1:7, mobility_indicator) %>%
-  arrange(mobility_indicator)
-
-join_city <- df_apple_city %>%
-  mutate(mobility_indicator = case_when(
-    str_detect(data_type, "driving") ~ "Driving",
-    str_detect(data_type, "transit") ~ "Public transport",
-    str_detect(data_type, "walking") ~ "Walking")) %>%
-  select(1:7, mobility_indicator) %>%
-  arrange(mobility_indicator)
-
-joined_country_city <- rbind(join_country, join_city)
-
-# To change plot order of facet wrap, change the order of varible levels with factor()
-joined_country_city$location <- factor(joined_country_city$location, levels = capital_and_country)
-
-# Create facet wrap first with "old" order
-plot5 <- joined_country_city %>%
-  filter(location %in% capital_and_country) %>%
-  ggplot(aes(x = date, y = (value/100 -1)*100, color = mobility_indicator)) +
-  geom_line() +
-  theme_bw() +
-  my_text_theme +
-  
-  scale_x_date(expand = c(0,0), labels = date_format("%b %y")) +
-  scale_y_continuous(expand = c(0,0)) +
-  scale_color_manual(values=c("#003f5c", "#bc5090", "#ffa600")) +
-
-  labs(
-    title = paste("Comparing Apple's mobility index for some countries and capitals"),
-    subtitle = paste("Percentage change in routing requests since", as.character(start, "%d %B %Y")),
-    caption = "Source: Apple, https://covid19.apple.com/mobility",
-    x = "",
-    y = ""
-  ) + 
-
-  facet_wrap(facets = vars(location))
-  
-# Add new order to facet wrap
-plot5 + facet_wrap(~ location) 
-```
-
-And last but not least, I want to compare the mobility trend indicators for Sweden to the three biggest cities in the country: 1. Stockholm, Gothenburg and Malmö. Oddly, the city Malmö is spelled using the Swedish letter "ö" in the Apple data, while Gothenburg (in Swedish: Göteborg) is spelled in English "Gothenburg". Interesting, I wonder why that is?
+Next, I want to compare the mobility trend indicators for Sweden to the three biggest cities in the country: 1. Stockholm, 2. Gothenburg and 3. Malmö. Oddly, the city Malmö is spelled using the Swedish letter "ö" in the Apple data, while Gothenburg (in Swedish: Göteborg) is spelled in English "Gothenburg". Interesting, I wonder why that is? I also notice that there is no up swing in the mobility indicator 'driving' for any of the three cities, indicating that the big uptick in driving was performed outside the three biggest cities:
 
 ```{r}
 
@@ -287,14 +240,14 @@ joined_country_city <- rbind(join_country, join_city)
 joined_country_city$location <- factor(joined_country_city$location, levels = sweden_cities)
 
 # Create facet wrap first with "old" order
-plot6 <- joined_country_city %>%
+plot5 <- joined_country_city %>%
   filter(location %in% sweden_cities) %>%
   ggplot(aes(x = date, y = (value/100 -1)*100, color = mobility_indicator)) +
   geom_line() +
   theme_bw() +
   my_text_theme +
   
-  scale_x_date(expand = c(0,0), labels = date_format("%b %y")) +
+  scale_x_date(expand = c(0,0), labels = scales::date_format("%b %y")) +
   scale_y_continuous(expand = c(0,0)) +
   scale_color_manual(values=c("#003f5c", "#bc5090", "#ffa600")) +
 
@@ -309,7 +262,60 @@ plot6 <- joined_country_city %>%
   facet_wrap(facets = vars(location))
   
 # Add new order to facet wrap
-plot6 + facet_wrap(~ location)
+plot5 + facet_wrap(~ location)
 ```
 
-That was all for now! Omg, there were so many more possibilities available for tweaking the plots when using ggplot2 in tidyverse than I expected. I really had to spend quite some time online reading documentation and checking examples. The possibilites are truely immense so please see the examples above as a glimpse into the world of tidy! I can warmly recommend the folowing page on the website [**www.datacarpentry.org**](https://datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2) that I found particularly useful.
+Next, I want to compare Stockholm to the capitals of Denmark (Copenhagen) and Norway (Oslo). I want to visualise both all three capitals and countries in one single plot:
+
+```{r}
+
+capital_and_country <- c("Stockholm", "Copenhagen", "Oslo", "Sweden", "Denmark", "Norway")
+
+join_country <- df_apple_country %>%
+  mutate(mobility_indicator = case_when(
+    str_detect(data_type, "driving") ~ "Driving",
+    str_detect(data_type, "transit") ~ "Public transport",
+    str_detect(data_type, "walking") ~ "Walking")) %>%
+  select(1:7, mobility_indicator) %>%
+  arrange(mobility_indicator)
+
+join_city <- df_apple_city %>%
+  mutate(mobility_indicator = case_when(
+    str_detect(data_type, "driving") ~ "Driving",
+    str_detect(data_type, "transit") ~ "Public transport",
+    str_detect(data_type, "walking") ~ "Walking")) %>%
+  select(1:7, mobility_indicator) %>%
+  arrange(mobility_indicator)
+
+joined_country_city <- rbind(join_country, join_city)
+
+# To change plot order of facet wrap, change the order of varible levels with factor()
+joined_country_city$location <- factor(joined_country_city$location, levels = capital_and_country)
+
+# Create facet wrap first with "old" order
+plot6 <- joined_country_city %>%
+  filter(location %in% capital_and_country) %>%
+  ggplot(aes(x = date, y = (value/100 -1)*100, color = mobility_indicator)) +
+  geom_line() +
+  theme_bw() +
+  my_text_theme +
+  
+  scale_x_date(expand = c(0,0), labels = scales::date_format("%b %y")) +
+  scale_y_continuous(expand = c(0,0)) +
+  scale_color_manual(values=c("#003f5c", "#bc5090", "#ffa600")) +
+
+  labs(
+    title = paste("Comparing Apple's mobility index for some countries and capitals"),
+    subtitle = paste("Percentage change in routing requests since", as.character(start, "%d %B %Y")),
+    caption = "Source: Apple, https://covid19.apple.com/mobility",
+    x = "",
+    y = ""
+  ) + 
+
+  facet_wrap(facets = vars(location))
+  
+# Add new order to facet wrap
+plot6 + facet_wrap(~ location) 
+```
+
+That was all for now! Omg, there were so many more possibilities available for tweaking plots when using ggplot2 in tidyverse than I expected. I really had to spend quite some time online reading documentation and checking examples. The possibilites are truely immense so please see the examples above as a glimpse into the world of tidy! I can warmly recommend the folowing page on the website [**www.datacarpentry.org**](https://datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2) that I found particularly useful.
